[gd_scene load_steps=9 format=3 uid="uid://dgf1qrronkihu"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_wn61u"]
[ext_resource type="PackedScene" uid="uid://bmmoer40phkvh" path="res://scenes/ui.tscn" id="2_xvmp8"]
[ext_resource type="PackedScene" uid="uid://cwpm2y8mf8kxm" path="res://scenes/field.tscn" id="3_gnhli"]
[ext_resource type="PackedScene" uid="uid://btrwyrqgii5dk" path="res://scenes/palette.tscn" id="4_posbo"]
[ext_resource type="PackedScene" uid="uid://c845tw8ecfjsk" path="res://scenes/ball.tscn" id="5_ln7l7"]
[ext_resource type="PackedScene" uid="uid://dngpgbbfwslyx" path="res://scenes/pause_menu.tscn" id="6_hxmyg"]
[ext_resource type="AudioStream" uid="uid://cg0gsxnyuci1t" path="res://assets/audio/goal.mp3" id="7_u27w7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwydk"]
size = Vector2(20, 720)

[node name="Game" type="Node2D"]
script = ExtResource("1_wn61u")

[node name="UI" parent="." node_paths=PackedStringArray("timer") instance=ExtResource("2_xvmp8")]
timer = NodePath("../StartTimer")

[node name="Field" parent="." instance=ExtResource("3_gnhli")]
layer = -1

[node name="LeftPlayer" parent="." instance=ExtResource("4_posbo")]
unique_name_in_owner = true
position = Vector2(30, 360)

[node name="RightPlayer" parent="." instance=ExtResource("4_posbo")]
unique_name_in_owner = true
position = Vector2(1250, 360)
player_side = 1

[node name="Ball" parent="." instance=ExtResource("5_ln7l7")]
unique_name_in_owner = true
position = Vector2(640, 360)

[node name="LeftGoal" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2(-10, 360)
shape = SubResource("RectangleShape2D_xwydk")

[node name="RightGoal" type="Area2D" parent="."]
position = Vector2(1300, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
position = Vector2(-10, 360)
shape = SubResource("RectangleShape2D_xwydk")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="PauseMenu" parent="." instance=ExtResource("6_hxmyg")]

[node name="GoalSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_u27w7")

[connection signal="quit_actioned" from="UI" to="." method="_on_ui_quit_actioned"]
[connection signal="restart_actioned" from="UI" to="." method="_on_restart_actioned"]
[connection signal="area_entered" from="LeftGoal" to="." method="_on_goal_area_entered" binds= [1]]
[connection signal="area_entered" from="RightGoal" to="." method="_on_goal_area_entered" binds= [0]]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="quit_actioned" from="PauseMenu" to="." method="_on_pause_menu_quit_actioned"]
